# logigrafika-solver

./: .clang-format  CMakeLists.txt  build.sh  build_ub2004_all.sh  build_win_all.sh  clang_format.sh  compiler_flags.cmake  sanitizers.cmake
nonogram-solver-lib/: CMakeLists.txt
nonogram-solver-lib/include/: puzzle.h  puzzle_solver.h
nonogram-solver-lib/src/: puzzle.cpp  puzzle_solver.cpp
puzzles/1/: puzzle.in
puzzles/2/: puzzle.in
puzzles/3/: puzzle.in
src/: main.cpp
